Working otel collerated logs

--- a/apps/rest-services/dotnet/RandomDateAPIOTel/appsettings.Development.json
+++ b/apps/rest-services/dotnet/RandomDateAPIOTel/appsettings.Development.json
@@ -4,5 +4,31 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/applog-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName"
+    ],
+    "Properties": {
+      "ApplicationName": "Your ASP.NET Core App"
+    }
   }
 }
