--- a/guides/kubernetes/configuration/cluster-collector.yaml
+++ b/guides/kubernetes/configuration/cluster-collector.yaml
@@ -29,6 +29,7 @@ config:
         scrape_configs:
           - job_name: 'kube-state-metrics'
             metrics_path: /metrics
+            scheme: http
             static_configs:
               - targets:
                   - kube-state-metrics.default.svc:8080
