Update Kubernetes Docs (#149)
* Update KSM configuration

* Remove debug

* Add scheme back

* Fix regex

* Add . back for regex

* Change to OTTL syntax

--- a/guides/kubernetes/configuration/cluster-collector.yaml
+++ b/guides/kubernetes/configuration/cluster-collector.yaml
@@ -33,6 +33,10 @@ config:
             static_configs:
               - targets:
                   - kube-state-metrics.default.svc:8080
+            metric_relabel_configs:
+              - source_labels: [__name__]
+                regex: 'kube_daemonset_.*|kube_deployment_.*|kube_job_.*|kube_node_.*|kube_pod_.*|kube_replicaset_.*|kube_statefulset_.*|kube_service_spec_type'
+                action: keep
 
   processors:
     cumulativetodelta: {}
@@ -130,6 +134,12 @@ config:
           - from: resource_attribute
             name: k8s.pod.uid
     
+    # Drop metric after count connector has used it
+    filter/ksm:
+      metrics:
+        metric:
+          - metric.name == "kube_service_spec_type"
+  
   connectors:
     # The count connector helps us generate three custom metrics by counting the number 
     # of metric series. It generates the following metrics:
@@ -171,5 +181,5 @@ config:
         
       metrics:
         receivers: [otlp, prometheus, count]
-        processors: [resource, transform/ksm_to_dd, transform/rename_uid, groupbyattrs, k8sattributes, cumulativetodelta]
+        processors: [filter/ksm, resource, transform/ksm_to_dd, transform/rename_uid, groupbyattrs, k8sattributes, cumulativetodelta]
         exporters: [datadog/exporter]
