--- a/guides/kubernetes/configuration/cluster-collector.yaml
+++ b/guides/kubernetes/configuration/cluster-collector.yaml
@@ -15,8 +15,6 @@ extraEnvs:
       secretKeyRef:
         name: datadog-secret
         key: api-key
-  - name: CLUSTER_NAME
-    valueFrom: 
 
 config:
   receivers:
@@ -130,6 +128,12 @@ config:
           - from: resource_attribute
             name: k8s.pod.uid
     
+    transform/sum_to_gauge:
+      metric_statements:
+        - convert_sum_to_gauge() where metric.name == "k8s.service.count"
+        - convert_sum_to_gauge() where metric.name == "k8s.node.count"
+        - convert_sum_to_gauge() where metric.name == "k8s.job.count"
+
   connectors:
     # The count connector helps us generate three custom metrics by counting the number 
     # of metric series. It generates the following metrics:
@@ -156,7 +160,7 @@ config:
 
         k8s.job.count:
           conditions:
-            - metric.name == "kube_job_status_active"
+            - metric.name == "kube_job_owner"
 
   exporters:
     datadog/exporter:
@@ -171,5 +175,5 @@ config:
         
       metrics:
         receivers: [otlp, prometheus, count]
-        processors: [resource, transform/ksm_to_dd, transform/rename_uid, groupbyattrs, k8sattributes, cumulativetodelta]
+        processors: [resource, transform/ksm_to_dd, transform/rename_uid, groupbyattrs, k8sattributes, cumulativetodelta, transform/sum_to_gauge]
         exporters: [datadog/exporter]
