Update docs to include pod memory usage and container id

--- a/guides/kubernetes/configuration/daemonset-collector.yaml
+++ b/guides/kubernetes/configuration/daemonset-collector.yaml
@@ -82,6 +82,7 @@ config:
           - service.name
           - service.version
           - service.instance.id
+          - container.id
       passthrough: false
 
     # the order of resource detection is important as it will influence how attributes
