--- a/apps/rolldice-game/config.yml
+++ b/apps/rolldice-game/config.yml
@@ -19,30 +19,51 @@ receivers:
       processes:
 
 exporters:
-  # NOTE: Prior to v0.86.0 use `logging` instead of `debug`.
   debug:
     verbosity: detailed
   datadog/exporter:
     api:
-      site: datadoghq.com
+      site: datad0g.com
       key: ${env:DD_API_KEY}
-  
+  otlphttp:
+    headers:
+      "Dd-Protocol": "otlp"
+      "Dd-Api-Key": "${env:DD_API_KEY}"
+    metrics_endpoint: https://trace.agent.datad0g.com/api/v0.2/stats
+    tls:
+      insecure: true
+
+connectors:
+  routing:
+    default_pipelines: [metrics/datadog]
+    table:
+      - context: metric
+        condition: metric.name == "http.server.request.duration"
+        pipelines: [metrics/dd_trace_metrics]
+      - context: metric
+        condition: metric.name == "http.client.request.duration"
+        pipelines: [metrics/dd_trace_metrics]
+
 processors:
   batch:
-connectors:
-  datadog/connector:
+  cumulativetodelta:
+  probabilistic_sampler/sampling:
+    sampling_percentage: 15
+
 service:
   pipelines:
-    traces/sampling:
-      receivers: [datadog/connector]
-      processors: [] # Add any sampling here
-      exporters: [datadog/exporter]
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [datadog/connector]
-    metrics:
-      receivers: [datadog/connector, otlp]
-      processors: [batch]
       exporters: [datadog/exporter]
-      
+    metrics:
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [routing]
+    metrics/datadog:
+      receivers: [routing]
+      exporters: [datadog/exporter]
+    metrics/dd_trace_metrics:
+      receivers: [routing]
+      processors: [cumulativetodelta]
+      exporters: [debug, datadog/exporter, otlphttp]
