--- a/apps/rolldice-game/docker-compose.yml
+++ b/apps/rolldice-game/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - OTEL_SERVICE_NAME=controller
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://otelcol:4317
       - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
+      - OTEL_SEMCONV_STABILITY_OPT_IN=http
 
 
   rolling:
@@ -32,6 +33,7 @@ services:
       - OTEL_SERVICE_NAME=rolly
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://otelcol:4317
       - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
+      - OTEL_SEMCONV_STABILITY_OPT_IN=http
 
 
   scoring:
@@ -47,6 +49,7 @@ services:
       - OTEL_SERVICE_NAME=scorey
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://otelcol:4317
       - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
+      - OTEL_SEMCONV_STABILITY_OPT_IN=http
 
   otelcol:
     image: otel/opentelemetry-collector-contrib
