--- a/apps/rolldice-http-metrics/game_controller/Dockerfile
+++ b/apps/rolldice-http-metrics/game_controller/Dockerfile
@@ -13,6 +13,9 @@ COPY settings.gradle .
 # Copy source code
 COPY src src
 
+# Copy metrics view configuration for exponential histograms
+COPY metrics_view.yaml .
+
 # Make gradlew executable
 RUN chmod +x ./gradlew
 
