--- a/apps/rolldice-http-metrics/rolling/Dockerfile
+++ b/apps/rolldice-http-metrics/rolling/Dockerfile
@@ -8,7 +8,4 @@ RUN pip install -r requirements.txt
 
 EXPOSE 5004
 
-ENV FLASK_RUN_PORT=5004
-ENV FLASK_RUN_HOST=0.0.0.0
-
-CMD ["opentelemetry-instrument", "--service_name", "dicey", "--logs_exporter", "otlp", "flask", "run"]
+CMD ["python", "app.py"]
