--- a/apps/rolldice-http-metrics/scoring/Dockerfile
+++ b/apps/rolldice-http-metrics/scoring/Dockerfile
@@ -8,7 +8,4 @@ RUN pip install -r requirements.txt
 
 EXPOSE 5001
 
-ENV FLASK_RUN_PORT=5001
-ENV FLASK_RUN_HOST=0.0.0.0
-
-CMD ["opentelemetry-instrument", "--service_name", "scorey", "--logs_exporter", "otlp", "flask", "run"]
+CMD ["python", "app.py"]
