--- a/apps/rolldice-http-metrics/helm-chart/templates/configmap.yaml
+++ b/apps/rolldice-http-metrics/helm-chart/templates/configmap.yaml
@@ -32,13 +32,13 @@ data:
         verbosity: detailed
       datadog/exporter:
         api:
-          site: {{ .Values.otelCollector.datadog.site }}
+          site: ${env:DD_SITE}
           key: ${env:DD_API_KEY}
       otlphttp:
         headers:
           "Dd-Protocol": "otlp"
           "Dd-Api-Key": "${env:DD_API_KEY}"
-        metrics_endpoint: https://trace.agent.{{ .Values.otelCollector.datadog.site }}/api/v0.2/stats
+        metrics_endpoint: https://trace.agent.${env:DD_SITE}/api/v0.2/stats
         tls:
           insecure: true
 
