Update Java calendar example

--- a/apps/rest-services/java/calendar/deploys/Dockerfile.otel
+++ b/apps/rest-services/java/calendar/deploys/Dockerfile.otel
@@ -1,12 +1,13 @@
 # Unless explicitly stated otherwise all files in this repository are licensed
 # under the Apache 2.0 License.
 #
-FROM openjdk:17-buster
+FROM eclipse-temurin:17-jdk-jammy
 
 RUN apt-get update -y; apt-get install curl -y
 
 WORKDIR /home/otel
-RUN curl -Lo opentelemetry-javaagent.jar  https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v2.6.0/opentelemetry-javaagent.jar
+RUN curl -Lo opentelemetry-javaagent.jar https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar
+
 COPY . calendar/
 
 WORKDIR /home/otel/calendar
