--- a/apps/rest-services/java/calendar/deploys/docker/docker-compose-dd-sdk.yml
+++ b/apps/rest-services/java/calendar/deploys/docker/docker-compose-dd-sdk.yml
@@ -24,7 +24,7 @@ services:
       - "9090:9090"
   datadog-agent:
     container_name: datadog-agent
-    image: "datadog/agent:7.63.0-rc.1"
+    image: "datadog/agent:latest"
     pid: host
     ports:
       - 4317:4317
