--- a/apps/rest-services/java/calendar/deploys/Dockerfile.dd
+++ b/apps/rest-services/java/calendar/deploys/Dockerfile.dd
@@ -1,7 +1,7 @@
 # Unless explicitly stated otherwise all files in this repository are licensed
 # under the Apache 2.0 License.
 #
-FROM openjdk:17-buster
+FROM eclipse-temurin:17-jdk-jammy
 
 RUN apt-get update -y; apt-get install curl -y --no-install-recommends
 
