--- a/apps/rest-services/java/calendar/build.gradle
+++ b/apps/rest-services/java/calendar/build.gradle
@@ -7,8 +7,8 @@ plugins {
     id 'java'
     id 'maven-publish'
     id 'application'
-    id 'org.springframework.boot' version '3.0.2'
-    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.springframework.boot' version '4.0.0'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
 repositories {
@@ -21,20 +21,20 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'net.logstash.logback:logstash-logback-encoder:7.2'
-    implementation 'ch.qos.logback:logback-classic:1.4.5'
-    implementation 'ch.qos.logback:logback-core:1.4.5'
-    implementation 'org.slf4j:slf4j-api:2.0.6'
-    runtimeOnly 'io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0:1.28.0-alpha'
-    implementation 'io.opentelemetry:opentelemetry-api:1.28.0'
-    implementation 'io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations:2.6.0'
+    implementation 'net.logstash.logback:logstash-logback-encoder:9.0'
+    implementation 'ch.qos.logback:logback-classic:1.5.21'
+    implementation 'ch.qos.logback:logback-core:1.5.21'
+    implementation 'org.slf4j:slf4j-api:2.0.17'
+    runtimeOnly 'io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0:2.22.0-alpha'
+    implementation 'io.opentelemetry:opentelemetry-api:1.57.0'
+    implementation 'io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations:2.22.0'
 }
 
 group = 'com.datadog.example'
 version = '0.0.1-SNAPSHOT'
 description = 'calendar'
 java.sourceCompatibility = 17
-mainClassName = 'com.otel.main.SpringApp'
+application.mainClass = 'com.otel.main.SpringApp'
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
