--- a/apps/rest-services/java/calendar/deploys/calendar/templates/deployment.yaml
+++ b/apps/rest-services/java/calendar/deploys/calendar/templates/deployment.yaml
@@ -80,7 +80,9 @@ spec:
                 k8s.pod.name=$(OTEL_K8S_POD_NAME),
                 k8s.container.name={{ .Chart.Name }},
                 host.name=$(OTEL_K8S_NODE_NAME),
-                deployment.environment=$(OTEL_K8S_NAMESPACE)
+                deployment.environment=$(OTEL_K8S_NAMESPACE),
+                team=calendar,
+                env=dev
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.affinity }}
