--- a/apps/rolldice-http-metrics/helm-chart/templates/otelcol-deployment.yaml
+++ b/apps/rolldice-http-metrics/helm-chart/templates/otelcol-deployment.yaml
@@ -48,7 +48,7 @@ spec:
                   key: {{ .Values.otelCollector.datadog.apiKeySecret.key }}
             {{- end }}
             - name: DD_SITE
-              value: {{ .Values.otelCollector.datadog.site | quote }}
+              value: {{ .Values.otelCollector.datadog.site | default "datadoghq.com" | quote }}
             - name: DD_OTLP_CONFIG_RECEIVER_PROTOCOLS_GRPC_ENDPOINT
               value: "0.0.0.0:{{ .Values.otelCollector.service.grpcPort }}"
             - name: DD_OTLP_CONFIG_RECEIVER_PROTOCOLS_HTTP_ENDPOINT
