--- a/apps/rolldice-http-metrics/values-spanmetricsconnector.yaml
+++ b/apps/rolldice-http-metrics/values-spanmetricsconnector.yaml
@@ -35,7 +35,7 @@ otelCollector:
     repository: "otel/opentelemetry-collector-contrib"
     tag: "latest"
   datadog:
-    site: "datadoghq.com"
+    site: ""  # Uses DD_SITE environment variable
     apiKeySecret:
       name: "datadog-secret"
       key: "api-key"
