--- a/apps/rolldice-http-metrics/helm-chart/templates/configmap-spanmetricsconnector.yaml
+++ b/apps/rolldice-http-metrics/helm-chart/templates/configmap-spanmetricsconnector.yaml
@@ -46,9 +46,98 @@ data:
       forward/debug:
       spanmetrics:
         aggregation_temporality: AGGREGATION_TEMPORALITY_DELTA
+        add_resource_attributes: true
         dimensions:
+          # env
+          - name: deployment.environment.name
+
+          # version
+          - name: service.version
+
+          # status code
+          - name: http.response.status_code
+
+          # all inputs for host
+          - name: host
+          - name: aws.ecs.launchtype
+          - name: aws.ecs.task.arn
+          - name: cloud.provider
+          - name: cloud.account.id
+          - name: host.id
+          - name: host.name
+          - name: k8s.node.name
+          - name: k8s.cluster.name
+          - name: azure.resourcegroup.name
+
+          # peer tags
+          - name: aws.sqs.queue.url
+          - name: aws.s3.bucket
+          - name: db.hostname
+          - name: db.namespace
+          - name: db.system.name
+          - name: messaging.destination.name
+          - name: messaging.system
+          - name: service.peer.name
+          - name: rpc.method
+          - name: rpc.system.name
+          - name: server.address
+
+          # container tags
+          - name: container.id
+          - name: container.name
+          - name: container.image.name
+          - name: container.image.tag
+          - name: container.runtime
+          - name: cloud.provider
+          - name: cloud.region
+          - name: cloud.availability_zone
+          - name: aws.ecs.task.family
+          - name: aws.ecs.task.arn
+          - name: aws.ecs.cluster.arn
+          - name: aws.ecs.task.revision
+          - name: aws.ecs.container.arn
+          - name: k8s.container.name
+          - name: k8s.cluster.name
+          - name: k8s.deployment.name
+          - name: k8s.replicaset.name
+          - name: k8s.statefulset.name
+          - name: k8s.daemon.set.name
+          - name: k8s.job.name
+          - name: k8s.cronjob.name
+          - name: k8s.namespace.name
+          - name: k8s.pod.name
+
+          # all inputs for operation name
           - name: operation.name
-            default: unknown
+          - name: http.request.method
+          - name: http.method
+          - name: db.system
+          - name: messaging.system
+          - name: messaging.operation
+          - name: rpc.system
+          - name: rpc.service
+          - name: faas.invoked_provider
+          - name: faas.invoked_name
+          - name: faas.trigger
+          - name: graphql.operation.type
+          - name: network.protocol.name
+
+          # all inputs for resource name
+          - name: resource.name
+          - name: http.request.method
+          - name: http.method
+          - name: http.route
+          - name: messaging.operation
+          - name: messaging.destination
+          - name: messaging.destination.name
+          - name: rpc.method
+          - name: rpc.service
+          - name: graphql.operation.type
+          - name: graphql.operation.name
+          - name: db.system
+          - name: db.statement
+          - name: db.query.text
+
       routing:
         default_pipelines: [metrics/datadog]
         table:
@@ -74,180 +163,12 @@ data:
         metrics:
           datapoint:
             - 'datapoint.count == 0'
-      transform/operation_name:
-        error_mode: propagate
-        trace_statements:
-          - context: span
-            statements:
-              # -------------------------------------------------------------------
-              # 1. If operation.name is already set, we keep it and skip all rules.
-              #    All rules below are guarded by attributes["operation.name"] == nil
-              # -------------------------------------------------------------------
-
-              # -------------------------------------------------------------------
-              # 2. HTTP rules
-              # -------------------------------------------------------------------
-              # HTTP server: http.server.request
-              - set(attributes["operation.name"], "http.server.request")
-                where attributes["operation.name"] == nil and
-                      (attributes["http.request.method"] != nil or attributes["http.method"] != nil) and
-                      kind == SPAN_KIND_SERVER
-
-              # HTTP client: http.client.request
-              - set(attributes["operation.name"], "http.client.request")
-                where attributes["operation.name"] == nil and
-                      (attributes["http.request.method"] != nil or attributes["http.method"] != nil) and
-                      kind == SPAN_KIND_CLIENT
-
-              # -------------------------------------------------------------------
-              # 3. Database: <db.system>.query (client)
-              # -------------------------------------------------------------------
-              - set(attributes["operation.name"], Concat([attributes["db.system"], ".query"], ""))
-                where attributes["operation.name"] == nil and
-                      attributes["db.system"] != nil and
-                      kind == SPAN_KIND_CLIENT
-
-              # -------------------------------------------------------------------
-              # 4. Messaging: <messaging.system>.<messaging.operation>
-              #    for client/server/consumer/producer
-              # -------------------------------------------------------------------
-              - set(
-                  attributes["operation.name"],
-                  Concat([attributes["messaging.system"], ".", attributes["messaging.operation"]], "")
-                )
-                where attributes["operation.name"] == nil and
-                      attributes["messaging.system"] != nil and
-                      attributes["messaging.operation"] != nil and
-                      (
-                        kind == SPAN_KIND_CLIENT  or
-                        kind == SPAN_KIND_SERVER  or
-                        kind == SPAN_KIND_CONSUMER or
-                        kind == SPAN_KIND_PRODUCER
-                      )
-
-              # -------------------------------------------------------------------
-              # 5. RPC + AWS
-              # -------------------------------------------------------------------
-              # AWS client w/ service: aws.<rpc.service>.request
-              - set(
-                  attributes["operation.name"],
-                  Concat(["aws.", attributes["rpc.service"], ".request"], "")
-                )
-                where attributes["operation.name"] == nil and
-                      attributes["rpc.system"] != nil and
-                      attributes["rpc.system"] == "aws-api" and
-                      attributes["rpc.service"] != nil and
-                      kind == SPAN_KIND_CLIENT
-
-              # AWS client generic: aws.client.request
-              - set(attributes["operation.name"], "aws.client.request")
-                where attributes["operation.name"] == nil and
-                      attributes["rpc.system"] != nil and
-                      attributes["rpc.system"] == "aws-api" and
-                      kind == SPAN_KIND_CLIENT
-
-              # RPC client: <rpc.system>.client.request
-              - set(
-                  attributes["operation.name"],
-                  Concat([attributes["rpc.system"], ".client.request"], "")
-                )
-                where attributes["operation.name"] == nil and
-                      attributes["rpc.system"] != nil and
-                      kind == SPAN_KIND_CLIENT
-
-              # RPC server: <rpc.system>.server.request
-              - set(
-                  attributes["operation.name"],
-                  Concat([attributes["rpc.system"], ".server.request"], "")
-                )
-                where attributes["operation.name"] == nil and
-                      attributes["rpc.system"] != nil and
-                      kind == SPAN_KIND_SERVER
-
-              # -------------------------------------------------------------------
-              # 6. FAAS
-              # -------------------------------------------------------------------
-              # FAAS client: <faas.invoked_provider>.<faas.invoked_name>.invoke
-              - set(
-                  attributes["operation.name"], Concat([attributes["faas.invoked_provider"], attributes["faas.invoked_name"], "invoke"], "."))
-                where attributes["operation.name"] == nil and
-                      attributes["faas.invoked_provider"] != nil and
-                      attributes["faas.invoked_name"] != nil and
-                      kind == SPAN_KIND_CLIENT
-
-              # FAAS server: <faas.trigger>.invoke
-              - set(
-                  attributes["operation.name"],
-                  Concat([attributes["faas.trigger"], ".invoke"], "")
-                )
-                where attributes["operation.name"] == nil and
-                      attributes["faas.trigger"] != nil and
-                      kind == SPAN_KIND_SERVER
-
-              # -------------------------------------------------------------------
-              # 7. GraphQL
-              # -------------------------------------------------------------------
-              - set(attributes["operation.name"], "graphql.server.request")
-                where attributes["operation.name"] == nil and
-                      attributes["graphql.operation.type"] != nil
-
-              # -------------------------------------------------------------------
-              # 8. Generic protocol-based server/client fallback
-              # -------------------------------------------------------------------
-              # protocol.server.request
-              - set(
-                  attributes["operation.name"],
-                  Concat([attributes["network.protocol.name"], ".server.request"], "")
-                )
-                where attributes["operation.name"] == nil and
-                      attributes["network.protocol.name"] != nil and
-                      kind == SPAN_KIND_SERVER
-
-              # server.request
-              - set(attributes["operation.name"], "server.request")
-                where attributes["operation.name"] == nil and
-                      kind == SPAN_KIND_SERVER
-
-              # protocol.client.request
-              - set(
-                  attributes["operation.name"],
-                  Concat([attributes["network.protocol.name"], ".client.request"], "")
-                )
-                where attributes["operation.name"] == nil and
-                      attributes["network.protocol.name"] != nil and
-                      kind == SPAN_KIND_CLIENT
-
-              # client.request
-              - set(attributes["operation.name"], "client.request")
-                where attributes["operation.name"] == nil and
-                      kind == SPAN_KIND_CLIENT
-
-              # -------------------------------------------------------------------
-              # 9. Final fallback to span kind (like SpanKind.String / internal)
-              # -------------------------------------------------------------------
-              - set(attributes["operation.name"], "Server")
-                where attributes["operation.name"] == nil and kind == SPAN_KIND_SERVER
-
-              - set(attributes["operation.name"], "Client")
-                where attributes["operation.name"] == nil and kind == SPAN_KIND_CLIENT
-
-              - set(attributes["operation.name"], "Producer")
-                where attributes["operation.name"] == nil and kind == SPAN_KIND_PRODUCER
-
-              - set(attributes["operation.name"], "Consumer")
-                where attributes["operation.name"] == nil and kind == SPAN_KIND_CONSUMER
-
-              # -------------------------------------------------------------------
-              # 10. Default to "Internal"
-              # -------------------------------------------------------------------
-              - set(attributes["operation.name"], "Internal")
-                where attributes["operation.name"] == nil
 
     service:
       pipelines:
         traces:
           receivers: [otlp]
-          processors: [transform/operation_name, batch]
+          processors: [batch]
           exporters: [datadog/exporter, spanmetrics]
 
         # === Metrics Stage 1
