Add Java rolldice app that emits HTTP metrics (#155)
* Add rolldice-http-metrics app

* add version to payloads

* remove forking logic from collector config

* helm charts

* Many deployment changes

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@
 
 # rolldice-game node modules
 apps/rolldice-game/game_controller/node_modules
+
+# Java/Gradle files for rolldice-http-metrics
+apps/rolldice-http-metrics/game_controller/.gradle/
+apps/rolldice-http-metrics/game_controller/build/
+apps/rolldice-http-metrics/game_controller/bin/
+apps/rolldice-http-metrics/game_controller/gradle/wrapper/gradle-wrapper.jar
+apps/rolldice-http-metrics/game_controller/opentelemetry-javaagent.jar
+apps/rolldice-http-metrics/game_controller/dd-java-agent.jar
